--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="main">
+       <button type="button"> + </button>
+       <span> 0 </span>
+       <button type="button"> - </button>
+    </div>
     <script type='module' src="./index.js"></script>
 </body>
 </html>
