--- a/cars.html
+++ b/cars.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="cars.css">
   </head>
   <body>
     <header></header>
@@ -19,6 +20,6 @@
       <button type="submit">Search</button>
     </form>
     <ul class="js-list"></ul>
-    <script src="./main.js"></script>
+    <script src="./cars.js"></script>
   </body>
 </html>
