--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
        <button type="button"> - </button>
     </div>
     <script type='module' src="./index.js"></script>
+    <script type="module" src="./get-html.js"></script>
 </body>
 </html>
